--- a/src/view/index.html
+++ b/src/view/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
         <%=require("html-loader!./layout/html-head.html")  %>
-<body>
-
-    hello  nihao thanks how are 
-
-
-    <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
-</body>
+        <title>happymmall电商平台</title>
+    </head>
+    <body>
+        <%=require("html-loader!./layout/nav-simple.html")  %>
+        <%=require("html-loader!./layout/header.html")  %>
+        <div class="page-wrap w">
+            <%=require("html-loader!./layout/nav-side.html")  %>
+            <div class="content with-nav">test</div>
+        </div>
+        <%=require("html-loader!./layout/footer.html")  %>
+    </body>
 </html>
