--- a/src/view/layout/html-head.html
+++ b/src/view/layout/html-head.html
@@ -1,7 +1,6 @@
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="happymmall,电商">
+<meta name="description" content="happymmall电商平台开发">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-<head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title></title>
-</head>
